--- a/ProyectoUnidad2/Money Minder/index.html
+++ b/ProyectoUnidad2/Money Minder/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-  <main class="parent" id="background">
+  <main class="parent" id="backgroundInicio">
     <div class="banner"> <a href="html/login.html" class="selected">Login</a> </div>
     <div class = "parentContent">
       <div class = "content2"> </div>
