--- a/ProyectoUnidad2/Money Minder/html/exportar.html
+++ b/ProyectoUnidad2/Money Minder/html/exportar.html
@@ -28,10 +28,6 @@
     </ul>
   </nav>
 </div>
-<script>
-    function toggleSidebar() {
-      document.querySelector('.sidebar').classList.toggle('sidebar-open');
-    }
-  </script>
+<script src="../js/scriptPrincipal.js"></script>
 </body>
 </html>
