--- a/ProyectoUnidad2/Money Minder/html/mostrarEgresos.html
+++ b/ProyectoUnidad2/Money Minder/html/mostrarEgresos.html
@@ -65,7 +65,7 @@
         }
 
         // Llamar a la función para cargar los datos desde el archivo CSV
-        cargarDatosDesdeCSV('datos.csv', mostrarDatosEnHTML);
+        cargarDatosDesdeCSV('egresos.csv', mostrarDatosEnHTML);
     </script>
 </body>
 </html>
