--- a/ProyectoUnidad2/Money Minder/html/transacciones.html
+++ b/ProyectoUnidad2/Money Minder/html/transacciones.html
@@ -21,18 +21,14 @@
     <button class="close-btn" style="height: 9%; width: 100%" onclick="toggleSidebar()">✕</button>
     <ul>
 	 <li><a id="opResumen" href="resumen.html" >Resumen</a></li>
-	 <li><a id="opTransacciones" href="transacciones.html"  class="selected">Transacciones</a></li>
-	  <li><a id="opCategorias" href="categorías.html" >Categorías</a></li>
-	  <li><a id="opInformes" href="informes.html">Informes</a></li>
-	  <li><a id="opExportar" href="exportar.html" >Exportar</a></li>
+     <li><a id="opTransacciones" href= "ingresos.html">Ingresos</a></li>
+      <li><a id="opCategorias" href="egresos.html" >Egresos</a></li>
+      <li><a id="opInformes" href="informes.html" >Informes</a></li>
+      <li><a id="opExportar" href="exportar.html">Exportar</a></li>
     </ul>
   </nav>
 </div>
-<script>
-    function toggleSidebar() {
-      document.querySelector('.sidebar').classList.toggle('sidebar-open');
-    }
-  </script>
+<script src="../js/scriptPrincipal.js"></script>
 	
 </body>
 </html>
