--- a/ProyectoUnidad2/Money Minder/index.html
+++ b/ProyectoUnidad2/Money Minder/index.html
@@ -10,13 +10,13 @@
 <div class="container">
   <main class="parent" id="backgroundInicio">
     <div class="banner"> <a href="html/login.html" class="selected">Login</a> </div>
-    <div class = "parentContent">
+    <div class = "parentContent" style="display: flex; flex-direction: column">
       <div class = "content2"> </div>
       <div class = "content1">
         <div class="stacked-text"> <span style = "font-size: 250%">MONEY</span> <span style = "font-size: 170%">MINDER</span> </div>
         <div class="linea-horizontal"></div>
 		  <div class="description">
-  <p>Tu herramienta financiera personal para gestionar y registrar tus transacciones de manera fácil y efectiva. !Ingresa y toma el control de tus finanzas!</p>
+  <p>Tu herramienta financiera personal para gestionar y registrar tus transacciones de manera fácil y efectiva.</p>
 </div>
 
       </div>
